<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constraint_bio_metadata"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="0dp"
    android:background="@color/colorPrimaryDark"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/iv_profile_image">

    <TextView
        android:id="@+id/tv_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:alpha="1"
        android:elevation="4dp"
        android:text="@string/text_user_name"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tv_twitter_handle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_x_small"
        android:elevation="4dp"
        android:text="@string/string_user_handle"
        android:textColor="@color/secondary_text"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/tv_user_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_user_name" />

    <TextView
        android:id="@+id/tv_twitter_bio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:elevation="4dp"
        android:text="@string/text_bio"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_twitter_handle"
        app:layout_constraintTop_toBottomOf="@+id/tv_twitter_handle" />


    <ImageView
        android:id="@+id/iv_location"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@null"
        android:elevation="2dp"
        android:src="@drawable/ic_location"
        app:layout_constraintStart_toStartOf="@+id/tv_twitter_bio"
        app:layout_constraintTop_toBottomOf="@+id/tv_twitter_bio" />

    <TextView
        android:id="@+id/tv_location"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginStart="8dp"
        android:elevation="2dp"
        android:text="@string/text_country"
        android:textColor="@color/secondary_text"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_location"
        app:layout_constraintStart_toEndOf="@+id/iv_location"
        app:layout_constraintTop_toTopOf="@+id/iv_location" />

    <ImageView
        android:id="@+id/iv_link"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="@dimen/dimen_small"
        android:contentDescription="@null"
        android:elevation="2dp"
        android:src="@drawable/ic_link"
        app:layout_constraintBottom_toBottomOf="@+id/tv_location"
        app:layout_constraintStart_toEndOf="@+id/tv_location"
        app:layout_constraintTop_toTopOf="@+id/tv_location" />

    <TextView
        android:id="@+id/tv_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_small"
        android:elevation="2dp"
        android:text="@string/text_website"
        android:textColor="@color/link_text"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_link"
        app:layout_constraintStart_toEndOf="@+id/iv_link"
        app:layout_constraintTop_toTopOf="@+id/iv_link" />

    <ImageView
        android:id="@+id/iv_date"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="@dimen/dimen_small"
        android:contentDescription="@null"
        android:elevation="2dp"
        android:src="@drawable/ic_date"
        app:layout_constraintBottom_toBottomOf="@+id/tv_link"
        app:layout_constraintStart_toEndOf="@+id/tv_link"
        app:layout_constraintTop_toTopOf="@+id/tv_link" />

    <TextView
        android:id="@+id/tv_date_joined"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_small"
        android:elevation="2dp"
        android:text="@string/text_date"
        android:textColor="@color/secondary_text"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_date"
        app:layout_constraintStart_toEndOf="@+id/iv_date"
        app:layout_constraintTop_toTopOf="@+id/iv_date" />

    <TextView
        android:id="@+id/tv_following"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:elevation="2dp"
        android:text="@string/text_following_count"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/iv_location"
        app:layout_constraintTop_toBottomOf="@+id/iv_location" />

    <TextView
        android:id="@+id/tv_following_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_small"
        android:elevation="2dp"
        android:text="@string/text_following"
        android:textColor="@color/secondary_text"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_following"
        app:layout_constraintStart_toEndOf="@+id/tv_following"
        app:layout_constraintTop_toTopOf="@+id/tv_following" />


    <TextView
        android:id="@+id/tv_followers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_standard"
        android:elevation="2dp"
        android:text="@string/text_followers_number"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/tv_following_text"
        app:layout_constraintStart_toEndOf="@+id/tv_following_text"
        app:layout_constraintTop_toTopOf="@+id/tv_following_text" />

    <TextView
        android:id="@+id/tv_followers_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_small"
        android:elevation="2dp"
        android:text="@string/text_followers"
        android:textColor="@color/secondary_text"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_followers"
        app:layout_constraintStart_toEndOf="@+id/tv_followers"
        app:layout_constraintTop_toTopOf="@+id/tv_followers" />

</androidx.constraintlayout.widget.ConstraintLayout>